Homepage, skien & Het gebied af

--- a/PO/Homepage.html
+++ b/PO/Homepage.html
@@ -31,50 +31,65 @@
                     <img src="images/Skirent.jpeg">
                 </div>
                 <div class="tekstinfoblok">
+                    Huur eenvoudig het beste materiaal voor jouw wintersport. Van carving ski’s tot snowboards: start je vakantie met topkwaliteit.
                 </div>
-                <a href="Skien.html#blokskihuur"><div class="knopinfoblok">
-                    knop
-                </div></a>
+                <a href="Skien.html#blokskihuur">
+                    <div class="knopinfoblok">
+                    Ski’s huren
+                    </div>
+                </a>
             </div>
             <div class="Homepageinfoblokken">
                 <div class="plaatjeinfoblok">
                     <img src="images/Skiaccomodaties.jpg">
                 </div>
                 <div class="tekstinfoblok">
+                    Ontdek de fijnste hotels, chalets en appartementen in Flachau en de omliggende dorpen. Voor ieder budget een perfect verblijf.
                 </div>
-                <a href=""><div class="knopinfoblok">
-                    knop
-                </div></a>
+                <a href="">
+                    <div class="knopinfoblok">
+                    Accommodaties bekijken
+                    </div>
+                </a>
             </div>
             <div class="Homepageinfoblokken">
                 <div class="plaatjeinfoblok">
                     <img src="images/Skischool.webp">
                 </div>
                 <div class="tekstinfoblok">
+                    Beginner of gevorderd? <br>In het skigebied vind je professionele skischolen met lessen voor alle leeftijden en niveaus.
                 </div>
-                <a href="Skien.html#blokskiles"><div class="knopinfoblok">
-                    knop
-                </div></a>
+                <a href="Skien.html#blokskiles">
+                    <div class="knopinfoblok">
+                    Skilessen boeken
+                    </div>
+                </a>
             </div>
             <div class="Homepageinfoblokken">
                 <div class="plaatjeinfoblok">
                     <img src="images/skipassen.webp">
                 </div>
                 <div class="tekstinfoblok">
+                    Bekijk alle soorten skipassen voor Ski Amadé en kies de pas die het beste bij jouw verblijf past.
                 </div>
-                <a href="Skien.html#blokskipas"><div class="knopinfoblok">
-                    knop
-                </div></a>
+                <a href="Skien.html#blokskipas">
+                    <div class="knopinfoblok">
+                    Skipassen
+                    </div>
+                </a>
             </div>
             <div class="Homepageinfoblokken">
                 <div class="plaatjeinfoblok">
                     <img src="images/skiamade.jpg">
                 </div>
                 <div class="tekstinfoblok">
+                    Verken Flachau en de omliggende dorpen: pistes, activiteiten en de mooiste spots van het skigebied.
                 </div>
-                <a href="Het Skigebied.html#skigebieddorpen"><div class="knopinfoblok">
-                    knop
-                </div></a>
+                <a href="Het Skigebied.html#skigebieddorpen">
+                    <div class="knopinfoblok">
+                    Ontdek het gebied
+                    </div>
+                </a>
             </div>
         </div>
         <div id="containerkaart" class="containers standaardcontainer">
