--- a/PO/Het Skigebied.html
+++ b/PO/Het Skigebied.html
@@ -8,7 +8,7 @@
     </head>
     <header>
         <div class="containers" id="containernavigatiebalk">
-           <a href="Homepage.html"><div id="homebutton"><img src="images/flachaulogo.png" id="flachaulogo"></div></a>
+           <a href="Homepage.html"><div id="homebutton"><img src="images/logos/flachaulogo.png" id="flachaulogo"></div></a>
            <a href="Skien.html"><div class="navigatiebalk">Skiën</div></a>
            <a href="Het Skigebied.html"><div class="navigatiebalk">Het gebied</div></a>
            <a href="Accomodaties.html"><div class="navigatiebalk">Accomodaties</div></a>
@@ -22,11 +22,11 @@
             </div>
         </div>
         <div class="standaardcontainer" id="containerteksthetskigebied">
-            <div><p>Het skigebied Flachau is uitstekend bereikbaar en goed georganiseerd. 
+            <p>Het skigebied Flachau is uitstekend bereikbaar en goed georganiseerd. 
             <br>Alle dorpen zijn met elkaar verbonden via gratis skibussen en moderne liften, waardoor je eenvoudig het hele gebied kunt verkennen. 
             <br>In elk dorp vind je skischolen voor alle niveaus, evenals verhuurwinkels met het nieuwste materiaal. 
             <br>Kom je met de auto, dan zijn er ruime parkeermogelijkheden, en wie met de trein reist kan uitstappen in Radstadt of St. Johann im Pongau. 
-            <br>Kortom: alles is geregeld voor een zorgeloze wintersportvakantie.</p></div>
+            <br>Kortom: alles is geregeld voor een zorgeloze wintersportvakantie.</p>
         </div>
         <h2 id="hoofdtekstdorpen">Dorpen in het skigebied</h2>
         <div class="containers containerblokkendorpen" id="skigebieddorpen">
