--- a/PO/Homepage.html
+++ b/PO/Homepage.html
@@ -6,15 +6,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/vormgeving.css">
     </head>
-    <header>
-        <div class="containers" id="containernavigatiebalk">
-           <a href="Homepage.html"><div id="homebutton"><img src="images/Logos/flachaulogo.png" id="flachaulogo"></div></a>
-           <a href="Skien.html"><div class="navigatiebalk">Skiën</div></a>
-           <a href="Het Skigebied.html"><div class="navigatiebalk">Het gebied</div></a>
-           <a href="Accomodaties.html"><div class="navigatiebalk">Accomodaties</div></a>
-        </div>
-    </header>  
-    <body>
+  <body>
+      <header>
+          <div class="containers" id="containernavigatiebalk">
+             <a href="Homepage.html"><div id="homebutton"><img src="images/Logos/flachaulogo.png" id="flachaulogo"></div></a>
+             <a href="Skien.html"><div class="navigatiebalk">Skiën</div></a>
+             <a href="Het Skigebied.html"><div class="navigatiebalk">Het gebied</div></a>
+             <a href="Accommodaties.html"><div class="navigatiebalk">Accommodaties</div></a>
+          </div>
+      </header>  
         <div class="containerfoto" id="containerfotohomepage">
            <img src="images/SkiFoto.jpg">
         </div>
@@ -46,7 +46,7 @@
                 <div class="tekstinfoblok">
                     Ontdek de fijnste hotels, chalets en appartementen in Flachau en de omliggende dorpen. Voor ieder budget een perfect verblijf.
                 </div>
-                <a href="Accomodaties.html#containerblokkenaccomodaties">
+                <a href="Accommodaties.html#containerblokkenAccommodaties">
                     <div class="knopinfoblok">
                     Accommodaties bekijken
                     </div>
@@ -122,7 +122,7 @@
         <div id="footerlijn"></div>
         <div id="footertekst">
             <div class="footertekst">© Florian Wehmeijer</div>
-            <a href="Colofon.Florian Wehmeijer.A4b.txt" target="_blank"><div class="footertekst" id="linkcolofon">Colofon</div></a>
+            <a href="Colofon Florian Wehmeijer.txt" target="_blank"><div class="footertekst" id="linkcolofon">Colofon</div></a>
         </div>
     </footer>
 </html>
