--- a/PO/Skien.html
+++ b/PO/Skien.html
@@ -6,16 +6,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/vormgeving.css">
     </head>
-    <header>
-        <div class="containers" id="containernavigatiebalk">
-           <a href="Homepage.html"><div id="homebutton"><img src="images/Logos/flachaulogo.png" id="flachaulogo"></div></a>
-           <a href="Skien.html"><div class="navigatiebalk">Skiën</div></a>
-           <a href="Het Skigebied.html"><div class="navigatiebalk">Het gebied
-           </div></a>
-           <a href="Accomodaties.html"><div class="navigatiebalk">Accomodaties</div></a>
-        </div>
-    </header>  
-    <body>
+  <body>
+      <header>
+          <div class="containers" id="containernavigatiebalk">
+             <a href="Homepage.html"><div id="homebutton"><img src="images/Logos/flachaulogo.png" id="flachaulogo"></div></a>
+             <a href="Skien.html"><div class="navigatiebalk">Skiën</div></a>
+             <a href="Het Skigebied.html"><div class="navigatiebalk">Het gebied</div></a>
+             <a href="Accommodaties.html"><div class="navigatiebalk">Accommodaties</div></a>
+          </div>
+      </header>  
         <div class="containerfoto containers" id="containerfotoskien">
             <img src="images/SkiFoto2.jpg">
             <div class="bannertekstskien">
@@ -55,7 +54,7 @@
         <div id="footerlijn"></div>
         <div id="footertekst">
             <div class="footertekst">© Florian Wehmeijer</div>
-            <a href="Colofon.Florian Wehmeijer.A4b.txt" target="_blank"><div class="footertekst" id="linkcolofon">Colofon</div></a>
+            <a href="Colofon Florian Wehmeijer.txt" target="_blank"><div class="footertekst" id="linkcolofon">Colofon</div></a>
         </div>
     </footer>
 </html>
